--- a/StartBootstrap-Asp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/StartBootstrap-Asp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using StartBootstrap_Asp
 @using StartBootstrap_Asp.Models
 @using StartBootstrap_Asp.ViewModel
+@using Microsoft.AspNetCore.Identity
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
