--- a/StartBootstrap-Asp/Views/Home/Index.cshtml
+++ b/StartBootstrap-Asp/Views/Home/Index.cshtml
@@ -114,38 +114,39 @@
 					<span> <i class="fas fa-star"></i></span>
 				</div>
 
-				<form action="#" class="mt-5">
+				<form class="mt-5" asp-controller="Home" asp-action="Send" method="post">
 					<div class="row justify-content-center">
 						<div class="col-8">
+							<p class="text-danger">@TempData["message"]</p>
 							<div class="form-floating mb-3">
 								<input type="text"
 									   class="form-control"
-									   id="floatingName"
+									   asp-for="@Model.contactMessage.FullName"
 									   placeholder="Full Name" />
-								<label for="floatingName">Full Name</label>
+								<label asp-for="@Model.contactMessage.FullName">Full Name</label>
 							</div>
 							<div class="form-floating mb-3">
 								<input type="email"
 									   class="form-control"
-									   id="floatingEmail"
+									   asp-for="@Model.contactMessage.Email"
 									   placeholder="name@example.com" />
-								<label for="floatingEmail">Email address</label>
+								<label asp-for="@Model.contactMessage.Email">Email address</label>
 							</div>
 							<div class="form-floating mb-3">
 								<input type="number"
 									   class="form-control"
-									   id="floatingPhone"
+									   asp-for="@Model.contactMessage.Phone"
 									   placeholder="Phone Number"
 									   step="1" />
-								<label for="floatingPhone">Phone Number</label>
+								<label asp-for="@Model.contactMessage.Phone">Phone Number</label>
 							</div>
 							<div class="form-floating mb-3">
 								<textarea class="form-control"
 										  placeholder="Leave a comment here"
-										  id="floatingTextarea2"></textarea>
-								<label for="floatingTextarea2">Message</label>
+										  asp-for="@Model.contactMessage.Message"></textarea>
+								<label asp-for="@Model.contactMessage.Message">Message</label>
 							</div>
-							<button type="submit" class="btn disabled">Send</button>
+							<button type="submit" style="outline : none">Send</button>
 						</div>
 					</div>
 				</form>
