--- a/StartBootstrap-Asp/Areas/Admin/Views/Login/Login.cshtml
+++ b/StartBootstrap-Asp/Areas/Admin/Views/Login/Login.cshtml
@@ -3,6 +3,8 @@
     Layout = null;
 }
 
+@model CostumeUser
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -46,15 +48,14 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" asp-area = "admin" asp-controller = "Login" asp-action = "Login" method = "post">
+                                        <div asp-validation-summary = "All" class = "text-danger"></div>
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                            <input class="form-control form-control-user"
+                                                asp-for = "@Model.UserName">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                            <input type="password" class="form-control form-control-user" asp-for = "@Model.PasswordHash">
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -63,9 +64,11 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a asp-controller="home" asp-action="index" class="btn btn-primary btn-user btn-block">
+                                        <input asp-for = "@Model.Name" value = "name" hidden/>
+                                        <input asp-for = "@Model.LastName" value = "lastname" hidden/>
+                                        <button type = "submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                         <hr>
                                         <a href="index.html" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Login with Google
